<resources xmlns:color="http://schemas.android.com/apk/res-auto" xmlns:textcolor="http://schemas.android.com/apk/res/android">
    <string name="app_name">M-Gas</string>
    <string name="logo">M-GAS</string>
    <string name="motto">Cooking GasModel you trust, delivered right at your door-step!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_up_label">SIGN UP FOR M-GAS</string>
    <string name="button_sign_in">SIGN IN</string>
    <string name="text_view_sign_in"><u>SIGN IN</u></string>
    <string name="text_view_sign_up">Do not have an account? <u>SIGN UP</u></string>
    <string name="back_arrow">Back arrow</string>
    <string name="cooking_gas">Cooking GasModel</string>
    <string name="gas_name_quantity">GasModel name</string>
    <string name="gas_quantity">quantity (kg)</string>
    <string name="cost">Cost (Kshs)</string>
    <string name="quantity">Qty</string>
    <string name="Qty">Enter a number</string>
    <string name="button_order">ORDER</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="img_view_move">track arrow</string>
    <string name="contact_seller">Call seller</string>
</resources>