<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gas1"
    android:backgroundTint="@android:color/holo_purple"
    android:backgroundTintMode="multiply"
    tools:context=".SignUpActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_enter_name"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="105dp"
                android:text="@string/name"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_enter_phone_number"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_enter_name" />

            <TextView
                android:id="@+id/text_view_enter_password"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/password"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_enter_phone_number" />

            <TextView
                android:id="@+id/text_view_confirm_password"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/confirm_password"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_enter_password" />

            <EditText
                android:id="@+id/edit_text_enter_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="98dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:labelFor="@id/text_view_enter_name"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_enter_name"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_enter_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="36dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:labelFor="@id/text_view_enter_phone_number"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_enter_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_name" />

            <EditText
                android:id="@+id/edit_text_enter_password"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="41dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:labelFor="@id/text_view_enter_password"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_enter_password"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_phone_number" />

            <EditText
                android:id="@+id/edit_text_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="47dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:labelFor="@id/text_view_confirm_password"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_password" />

            <TextView
                android:id="@+id/text_view_sign_up_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_label"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/sign_up"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_confirm_password"
                app:layout_constraintVertical_bias="0.157" />

            <ImageView
                android:id="@+id/image_view_back_arrow"
                android:layout_width="80dp"
                android:layout_height="49dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/abc_vector_test"
                app:tint="@android:color/holo_orange_dark" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>