<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PlaceOrderActivity">

    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_cooking_gas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cooking_gas"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cooking_gas" />

                <TextView
                    android:id="@+id/text_view_gas_brand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/gas_name_quantity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_cooking_gas"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/gas_quantity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/image_view_cooking_gas"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_gas_brand" />

                <TextView
                    android:id="@+id/text_view_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/cost"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_cooking_gas"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_quantity" />

                <TextView
                    android:id="@+id/text_view_qty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/quantity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/image_view_cooking_gas"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_cost" />

                <EditText
                    android:id="@+id/edit_text_qty_no"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/Qty"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_qty"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_cost" />

                <Button
                    android:id="@+id/button_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_order"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_cooking_gas"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_qty_no" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>